--- a/Vercel.Json
+++ b/Vercel.Json
@@ -2,36 +2,27 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/public/index.html"
     }
   ],
   "headers": [
     {
-      "source": "/index.html",
+      "source": "/public/index.html",
       "headers": [
         {
-          "key": "Content-Type",
+          "key": "Content-Type", 
           "value": "text/html; charset=utf-8"
         },
         {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
           "key": "Cache-Control",
-          "value": "no-store, no-cache, must-revalidate"
-        },
-        {
-          "key": "Pragma",
-          "value": "no-cache"
-        },
-        {
-          "key": "Expires",
-          "value": "0"
+          "value": "no-store"
         }
       ]
     }
   ],
-  "cleanUrls": false,
-  "trailingSlash": false
+  "functions": {
+    "public/**": {
+      "memory": 1024
+    }
+  }
 }
