--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,8 @@
 {
-  "routes": [
+  "rewrites": [
     {
-      "src": "/index.html",
-      "headers": {
-        "Content-Type": "text/html; charset=utf-8",
-        "X-Content-Type-Options": "nosniff"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "**/*",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob: filesystem:; script-src * 'unsafe-inline' 'unsafe-eval'; style-src * 'unsafe-inline'; img-src * data: blob: filesystem:; font-src * data:; connect-src *; media-src *; object-src *; child-src *; frame-src *; worker-src *; form-action *; upgrade-insecure-requests"
-        }
-      ]
+      "source": "/(.*)",
+      "destination": "/public/index.html"
     }
   ]
 }
