--- a/Package.json
+++ b/Package.json
@@ -1,7 +1,5 @@
 {
   "name": "diymatch-app",
-  "version": "1.0.0",
-  "dependencies": {
-    "stripe": "^14.0.0"
-  }
+  "version": "4.0.0",
+  "description": "DIYMatch Mobile App"
 }
